[package]
name = "tokio-kad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "~1", features = ["attributes"] }
env_logger = "0.8"
futures = "0.3"
libp2p = { version="0.41", features = ["tcp-tokio", "kad"] }
tokio = { version="1", features = ["full"] }
